--- a/remote.html
+++ b/remote.html
@@ -37,6 +37,20 @@
                     <span class="fa fa-refresh" aria-hidden="true"></span>
                     <span class="text">%%TRANSLATE:RESTART%%</span>
                 </div>
+                
+		<!-- MagicMirror menu -->
+		<div id="restart-mm-button" class="menu-button power-menu">
+                    <span class="fa fa-recycle" aria-hidden="true"></span>
+                    <span class="text">%%TRANSLATE:RESTARTMM%%</span>
+                </div>
+		<div id="monitor-on-button" class="menu-button power-menu">
+                    <span class="fa fa-toggle-on" aria-hidden="true"></span>
+                    <span class="text">%%TRANSLATE:MONITORON%%</span>
+                </div>
+                <div id="monitor-off-button" class="menu-button power-menu">
+                    <span class="fa fa-toggle-off" aria-hidden="true"></span>
+                    <span class="text">%%TRANSLATE:MONITOROFF%%</span>
+                </div>
 
                 <!-- edit menu (created dynamically) -->
                 <!-- EDIT_MENU_TEMPLATE -->
