--- a/remote.html
+++ b/remote.html
@@ -15,40 +15,40 @@
 
 <div class="container">
     <div id="module_1_MMM-Remote-Control" class="module">
-        <div class="header">%%TRANSLATE:TITLE%%</div>
+        <header class="header">%%TRANSLATE:TITLE%%</header>
         <div class="module-content">
             <div class="menu normal">
                 <!-- main menu -->
                 <div id="power-button" class="menu-button main-menu">
-                    <span class="fa fa-power-off" aria-hidden="true"></span>
+                    <span class="fa fa-fw fa-power-off" aria-hidden="true"></span>
                     <span class="text">%%TRANSLATE:SHUTDOWN_MENU_NAME%%</span>
                 </div>
                 <div id="edit-button" class="menu-button main-menu">
-                    <span class="fa fa-pencil-square-o" aria-hidden="true"></span>
+                    <span class="fa fa-fw fa-pencil-square-o" aria-hidden="true"></span>
                     <span class="text">%%TRANSLATE:EDIT_MENU_NAME%%</span>
                 </div>
 
                 <!-- power menu -->
                 <div id="shut-down-button" class="menu-button power-menu">
-                    <span class="fa fa-power-off" aria-hidden="true"></span>
+                    <span class="fa fa-fw fa-power-off" aria-hidden="true"></span>
                     <span class="text">%%TRANSLATE:SHUTDOWN%%</span>
                 </div>
                 <div id="restart-button" class="menu-button power-menu">
-                    <span class="fa fa-refresh" aria-hidden="true"></span>
+                    <span class="fa fa-fw fa-refresh" aria-hidden="true"></span>
                     <span class="text">%%TRANSLATE:RESTART%%</span>
                 </div>
                 
 		<!-- MagicMirror menu -->
 		<div id="restart-mm-button" class="menu-button power-menu">
-                    <span class="fa fa-recycle" aria-hidden="true"></span>
+                    <span class="fa fa-fw fa-recycle" aria-hidden="true"></span>
                     <span class="text">%%TRANSLATE:RESTARTMM%%</span>
                 </div>
 		<div id="monitor-on-button" class="menu-button power-menu">
-                    <span class="fa fa-toggle-on" aria-hidden="true"></span>
+                    <span class="fa fa-fw fa-toggle-on" aria-hidden="true"></span>
                     <span class="text">%%TRANSLATE:MONITORON%%</span>
                 </div>
                 <div id="monitor-off-button" class="menu-button power-menu">
-                    <span class="fa fa-toggle-off" aria-hidden="true"></span>
+                    <span class="fa fa-fw fa-toggle-off" aria-hidden="true"></span>
                     <span class="text">%%TRANSLATE:MONITOROFF%%</span>
                 </div>
 
@@ -57,21 +57,21 @@
 
                 <!-- general back button -->
                 <div id="back-button" class="menu-button power-menu edit-menu">
-                    <span class="fa fa-arrow-left" aria-hidden="true"></span>
+                    <span class="fa fa-fw fa-arrow-left" aria-hidden="true"></span>
                     <span class="text">%%TRANSLATE:BACK%%</span>
                 </div>
             </div>
             <div class="result">
                 <div id="loading" class="status-indicator">
-                    <span class="fa fa-spinner fa-pulse fa-fw"></span>
+                    <span class="fa fa-fw fa-spinner fa-pulse fa-fw"></span>
                     <span class="text">%%TRANSLATE:LOADING%%</span>
                 </div>
                 <div id="error" class="status-indicator">
-                    <span class="fa fa-exclamation-circle"></span>
+                    <span class="fa fa-fw fa-exclamation-circle"></span>
                     <span class="text">%%TRANSLATE:ERROR%%</span>
                 </div>
                 <div id="success" class="status-indicator">
-                    <span class="fa fa-check-circle"></span>
+                    <span class="fa fa-fw fa-check-circle"></span>
                     <span class="text">%%TRANSLATE:DONE%%</span>
                 </div>
             </div>
