error handling and save function

--- a/remote.html
+++ b/remote.html
@@ -58,7 +58,13 @@
                     <span class="text">%%TRANSLATE:MONITOROFF%%</span>
                 </div>
 
-                <!-- edit menu (created dynamically) -->
+                <div id="save-button" class="menu-button main-menu">
+                    <span class="fa fa-fw fa-save" aria-hidden="true"></span>
+                    <span class="text">%%TRANSLATE:SAVE%%</span>
+                </div>
+
+                <!-- edit menu -->
+                <!-- (created dynamically) -->
                 <!-- EDIT_MENU_TEMPLATE -->
 
             </div>
