--- a/remote.html
+++ b/remote.html
@@ -19,7 +19,7 @@
         <div class="module-content">
             <div class="menu normal">
                 <!-- general back button -->
-                <div id="back-button" class="menu-button power-menu edit-menu">
+                <div id="back-button" class="menu-button power-menu edit-menu settings-menu">
                     <span class="fa fa-fw fa-arrow-left" aria-hidden="true"></span>
                     <span class="text">%%TRANSLATE:BACK%%</span>
                 </div>
@@ -32,6 +32,30 @@
                 <div id="edit-button" class="menu-button main-menu">
                     <span class="fa fa-fw fa-pencil-square-o" aria-hidden="true"></span>
                     <span class="text">%%TRANSLATE:EDIT_MENU_NAME%%</span>
+                </div>
+                <div id="settings-button" class="menu-button main-menu">
+                    <span class="fa fa-fw fa-wrench" aria-hidden="true"></span>
+                    <span class="text">%%TRANSLATE:CONFIGURE_MENU_NAME%%</span>
+                </div>
+                <div id="save-button" class="menu-button main-menu">
+                    <span class="fa fa-fw fa-save" aria-hidden="true"></span>
+                    <span class="text">%%TRANSLATE:SAVE%%</span>
+                </div>
+
+                <!-- settings menu -->
+                <div id="brightness-description" class="menu-button settings-menu">
+                    <span class="stack fa-fw">
+                        <span class="fa fa-fw fa-sun-o outer-label fa-stack-1x" aria-hidden="true"></span>
+                        <span class="fa fa-fw fa-adjust inner-label fa-stack-1x" aria-hidden="true"></span>
+                    </span>
+                    <span class="text">%%TRANSLATE:BRIGHTNESS%%</span>
+                </div>
+                <div id="brightness-container" class="slider-container menu-button settings-menu">
+                    <input id="brightness-slider" type="range" min="10" max="200" step="10" value="%%REPLACE::BRIGHTNESS%%" class="slider"/>
+                </div>
+                <div id="brightness-reset" class="menu-button settings-menu">
+                    <span class="fa fa-fw fa-undo" aria-hidden="true"></span>
+                    <span class="text">%%TRANSLATE:RESET%%</span>
                 </div>
 
                 <!-- power menu -->
@@ -56,11 +80,6 @@
                 <div id="monitor-off-button" class="menu-button power-menu">
                     <span class="fa fa-fw fa-toggle-off" aria-hidden="true"></span>
                     <span class="text">%%TRANSLATE:MONITOROFF%%</span>
-                </div>
-
-                <div id="save-button" class="menu-button main-menu">
-                    <span class="fa fa-fw fa-save" aria-hidden="true"></span>
-                    <span class="text">%%TRANSLATE:SAVE%%</span>
                 </div>
 
                 <!-- edit menu -->
