module data action + link to magic mirror homepage + sort changelog

--- a/remote.html
+++ b/remote.html
@@ -41,6 +41,10 @@
                     <span class="fa fa-fw fa-save" aria-hidden="true"></span>
                     <span class="text">%%TRANSLATE:SAVE%%</span>
                 </div>
+                <div id="mirror-link-button" class="menu-element button main-menu">
+                    <span class="fa fa-fw fa-external-link " aria-hidden="true"></span>
+                    <span class="text">%%TRANSLATE:VIEW_MIRROR%%</span>
+                </div>
 
                 <!-- settings menu -->
                 <div id="brightness-description" class="menu-element button settings-menu">
