UI extended for future config editing

--- a/remote.html
+++ b/remote.html
@@ -139,7 +139,7 @@
                 <!-- add new module menu -->
                 <div id="search-container" class="menu-element add-module-menu search-container">
                     <span class="fa fa-fw fa-search" aria-hidden="true"></span>
-                    <input id="add-module-search" type="text" placeholder="%%TRANSLATE:SEARCH%%"> </input>
+                    <input class="input-with-symbol" id="add-module-search" type="text" placeholder="%%TRANSLATE:SEARCH%%"> </input>
                     <span id="delete-search-input" class="fa fa-fw fa-times-circle delete-button" style="display:none;"></span>
                 </div>
                 <header class="header menu-element add-module-menu"></header>
