use real config data

--- a/remote.html
+++ b/remote.html
@@ -40,10 +40,6 @@
                     <span class="fa fa-fw fa-wrench" aria-hidden="true"></span>
                     <span class="text">%%TRANSLATE:CONFIGURE_MENU_NAME%%</span>
                 </div>
-                <div id="save-button" class="menu-element button main-menu">
-                    <span class="fa fa-fw fa-save" aria-hidden="true"></span>
-                    <span class="text">%%TRANSLATE:SAVE%%</span>
-                </div>
                 <div id="mirror-link-button" class="menu-element button main-menu">
                     <span class="fa fa-fw fa-external-link " aria-hidden="true"></span>
                     <span class="text">%%TRANSLATE:VIEW_MIRROR%%</span>
@@ -100,6 +96,10 @@
                 <div id="hide-all-button" class="menu-element button edit-menu">
                     <span class="fa fa-fw fa-toggle-off" aria-hidden="true"></span>
                     <span class="text">%%TRANSLATE:HIDEALL%%</span>
+                </div>
+                <div id="save-button" class="menu-element button edit-menu">
+                    <span class="fa fa-fw fa-save" aria-hidden="true"></span>
+                    <span class="text">%%TRANSLATE:SAVE%%</span>
                 </div>
                 <header class="header menu-element edit-menu"></header>
                 <div id="visible-modules-container" class="result-list menu-element edit-menu">
