add load error message

--- a/remote.html
+++ b/remote.html
@@ -172,6 +172,7 @@
                     <!-- <span class="text">%%TRANSLATE:DONE%%</span> -->
                 </div>
             </div>
+
             <div id="popup-container" class="popup">
                 <div id="close-popup">
                     <span class="fa fa-fw fa-times-circle delete-button"></span>
@@ -180,6 +181,13 @@
                     <!-- content is inserted here -->
                 </div>
             </div>
+
+            <div id="load-error">
+                <span class="fa fa-fw fa-exclamation-circle" aria-hidden="true"></span>
+                <span class="text">%%TRANSLATE:LOAD_ERROR%%</span>
+                <a href="https://github.com/jopyth/MMM-Remote-Control/issues">%%TRANSLATE:ISSUE_LINK%%</a>
+            </div>
+
         </div>
     </div>
 </div>
