save module config

--- a/remote.html
+++ b/remote.html
@@ -111,7 +111,7 @@
                         <span class="fa fa-fw fa-exclamation-circle"></span>
                         <span class="text">%%TRANSLATE:NO_MODULES_LOADED%%</span>
                     </div>
-                    <div id="visible-modules-results" class="small">
+                    <div id="visible-modules-results" class="results small">
                         <!-- elements are inserted here -->
                     </div>
                 </div>
@@ -120,6 +120,10 @@
                 <div id="add-module" class="menu-element button settings-menu">
                     <span class="fa fa-fw fa-plus" aria-hidden="true"></span>
                     <span class="text">%%TRANSLATE:ADD_MODULE%%</span>
+                </div>
+                <div id="save-config" class="menu-element button settings-menu">
+                    <span class="fa fa-fw fa-save" aria-hidden="true"></span>
+                    <span class="text">%%TRANSLATE:SAVE%%</span>
                 </div>
                 <header class="header menu-element settings-menu"></header>
                 <div id="config-modules-container" class="result-list menu-element settings-menu">
@@ -131,7 +135,7 @@
                         <span class="fa fa-fw fa-exclamation-circle"></span>
                         <span class="text">%%TRANSLATE:NO_MODULES_LOADED%%</span>
                     </div>
-                    <div id="config-modules-results" class="small">
+                    <div id="config-modules-results" class="results small">
                         <!-- elements are inserted here -->
                     </div>
                 </div>
@@ -152,7 +156,7 @@
                         <span class="fa fa-fw fa-exclamation-circle"></span>
                         <span class="text">%%TRANSLATE:NO_MODULES_LOADED%%</span>
                     </div>
-                    <div id="add-module-results" class="small">
+                    <div id="add-module-results" class="results small">
                         <!-- elements are inserted here -->
                     </div>
                 </div>
