--- a/remote.html
+++ b/remote.html
@@ -21,7 +21,7 @@
                 <!-- general back button -->
                 <div id="back-button" class="menu-element button power-menu edit-menu settings-menu add-module-menu">
                     <span class="fa fa-fw fa-arrow-left" aria-hidden="true"></span>
-                    <span class="text">%%TRANSLATE:BACK%%</span>
+                    <!-- <span class="text">%%TRANSLATE:BACK%%</span> -->
                 </div>
 
                 <!-- main menu -->
@@ -101,7 +101,6 @@
                     <span class="fa fa-fw fa-save" aria-hidden="true"></span>
                     <span class="text">%%TRANSLATE:SAVE%%</span>
                 </div>
-                <header class="header menu-element edit-menu"></header>
                 <div id="visible-modules-container" class="result-list menu-element edit-menu">
                     <div id="visible-modules-loading">
                         <span class="fa fa-fw fa-spinner fa-pulse"></span>
@@ -125,7 +124,6 @@
                     <span class="fa fa-fw fa-save" aria-hidden="true"></span>
                     <span class="text">%%TRANSLATE:SAVE%%</span>
                 </div>
-                <header class="header menu-element settings-menu"></header>
                 <div id="config-modules-container" class="result-list menu-element settings-menu">
                     <div id="config-modules-loading">
                         <span class="fa fa-fw fa-spinner fa-pulse"></span>
@@ -146,7 +144,6 @@
                     <input class="input-with-symbol" id="add-module-search" type="text" placeholder="%%TRANSLATE:SEARCH%%"> </input>
                     <span id="delete-search-input" class="fa fa-fw fa-times-circle delete-button" style="display:none;"></span>
                 </div>
-                <header class="header menu-element add-module-menu"></header>
                 <div id="add-module-container" class="result-list menu-element add-module-menu">
                     <div id="add-module-loading">
                         <span class="fa fa-fw fa-spinner fa-pulse"></span>
